# entropy-conservation

./: AGENT.md  Cargo.toml  README.md
examples/: tutorial.rs
memory/: JOURNAL.md
src/: conservation.rs  entropy.rs  flow.rs  gradient.rs  hodge.rs  lib.rs  persistence.rs  spectrum.rs
